--- a/logstash/conf.d/default/b2_filter_suricata.conf
+++ b/logstash/conf.d/default/b2_filter_suricata.conf
@@ -15,15 +15,20 @@ filter {
         }
         if [tls][sni] {
             mutate {
-                copy => { "[tls][sni]" => "[http][hostname]" }
-            }
+                copy => { "[tls][sni]" => "[lookup][host]" }
+                 }
         }
         if [dns][rrname] {
             mutate {
-                copy => { "[dns][rrname]" => "[http][hostname]" }
+                copy => { "[dns][rrname]" => "[lookup][host]" }
             }
         }
-        if [http][url] {
+        if [http][hostname] {
+            mutate {
+                copy => { "[http][hostname]" => "[lookup][host]" }
+            }
+        }
+        if [http][url] and [http][hostname] {
             mutate {
                 add_field => [ "[http][url_full]", "http://%{[http][hostname]}%{[http][url]}" ]
             }
