--- a/logstash/conf.d/d_enrichment.conf
+++ b/logstash/conf.d/d_enrichment.conf
@@ -118,21 +118,6 @@ filter {
             target => "user-agent"
           }
         }
-
-        if [http][hostname] and "dst_external in [tags]"{
-            translate {
-                field => "[http][hostname]"
-                destination => "[lookup][blk_host]"
-                dictionary_path => '/etc/logstash/translate/fqdn-combine.json'
-                add_tag => [ "blacklist", "dns_bla" ]
-                refresh_interval => "86400"
-                refresh_behaviour => replace
-            }
-            mutate {
-                add_field => [ "[http][hostname_urlquery]", "http://www.urlvoid.com/scan/%{[http][hostname]}" ]
-                add_field => [ "[http][hostname_virustotal]", "https://www.virustotal.com/en/domain/%{[http][hostname]}/information" ]
-            }
-        }
         if [http][url_full] and "dst_external" in [tags] {
             translate {
                 field => "[http][url_full]"
@@ -183,23 +168,25 @@ filter {
                     target => "[lookup][geoip][ASN]"
                     add_tag => [ "geo_ASN" ]
                 }
-                mutate {
-                    copy => { "[lookup][ip]" => "[lookup][host]" }
-                    remove_field => ["[lookup][geoip][ASN][ip]"]
-                    add_field => [ "[lookup][ip_senderbase]", "http://www.senderbase.org/lookup/?search_string=%{[lookup][ip]}" ]
-                    add_field => [ "[lookup][ip_virustotal]", "https://www.virustotal.com/#/ip-address/%{[lookup][ip]}" ]
+                if ![lookup][host] {
+                    mutate {
+                        copy => { "[lookup][ip]" => "[lookup][host]" }
+                        remove_field => ["[lookup][geoip][ASN][ip]"]
+                        add_field => [ "[lookup][ip_senderbase]", "http://www.senderbase.org/lookup/?search_string=%{[lookup][ip]}" ]
+                        add_field => [ "[lookup][ip_virustotal]", "https://www.virustotal.com/#/ip-address/%{[lookup][ip]}" ]
+                    }
+                    dns {
+                        reverse => [ "[lookup][host]" ]
+                        action => replace
+                        add_tag => [ "dns_hit" ]
+                        failed_cache_size => 10000
+                        failed_cache_ttl => 3600
+                        hit_cache_size => 10000
+                        hit_cache_ttl => 3600
+                    }
+                   if "dns_hit" not in [tags] { mutate { remove_field => [ "[lookup][host]" ] } }
                 }
-                dns {
-                    reverse => [ "[lookup][host]" ]
-                    action => replace
-                    add_tag => [ "dns_hit" ]
-                    failed_cache_size => 10000
-                    failed_cache_ttl => 3600
-                    hit_cache_size => 10000
-                    hit_cache_ttl => 3600
-                }
-                if "dns_hit" not in [tags] { mutate { remove_field => [ "[lookup][host]" ] } }
-                if [lookup][host] and "dst_external" in [tags]{
+                if [lookup][host] {
                     mutate {
                         add_field => [ "[lookup][host_urlquery]", "http://www.urlvoid.com/scan/%{[lookup][host]}" ]
                         add_field => [ "[lookup][host_virustotal]", "https://www.virustotal.com/en/domain/%{[lookup][host]}/information" ]
@@ -233,7 +220,6 @@ filter {
                         refresh_behaviour => replace
                     }
                 }
-
             }
 
         } #End if src.ip or dst.ip
