--- a/logstash/conf.d/d_enrichment.conf
+++ b/logstash/conf.d/d_enrichment.conf
@@ -231,8 +231,8 @@ filter {
                 add_field => [ "[alert][signature_url]", "http://doc.emergingthreats.net/bin/view/Main/%{[alert][signature_id]}" ]
             }
             #End Signature lookup
-            if [alert][signature_id] == 123456 and [src_ip] == "1.1.1.1" { mutate { add_tag => [ "Noise" ] } }
-            else if [alert][signature_id] == 1234567 and [http][hostname] == "www.google-analytics.com" { mutate { add_tag => [ "Noise" ] } }
+            if [alert][signature_id] == 123456 and [src_ip] == "1.1.1.1" { mutate { add_field => { "noise" => "1" } } }
+            else if [alert][signature_id] == 1234567 and [http][hostname] == "www.google-analytics.com" { mutate { add_field => { "noise" => "2" } } }
 
         }#End Tag Noise
 
