--- a/logstash/conf.d/default/b2_filter_suricata.conf
+++ b/logstash/conf.d/default/b2_filter_suricata.conf
@@ -18,9 +18,10 @@ filter {
                 copy => { "[tls][sni]" => "[lookup][host]" }
                  }
         }
-        if [dns][rrname] {
+        if [dns][type] == "answer" and [dns][rrtype] == "A" {
             mutate {
-                copy => { "[dns][rrname]" => "[lookup][host]" }
+                 copy => { "[dns][rdata]" => "[lookup][ip]" }
+                 copy => { "[dns][rrname]" => "[lookup][host]" }
             }
         }
         if [http][hostname] {
