--- a/logstash/conf.d/d_enrichment.conf
+++ b/logstash/conf.d/d_enrichment.conf
@@ -2,103 +2,54 @@ filter {
         #Enrichment
         if [src][ip] #=~ /^(?:[0-9]{1,3}\.){3}[0-9]{1,3}$/ #commented out check for valid IP
            {
-            cidr {
-                 add_tag => [ "src_homenet" ]
-                 address => [ "%{[src][ip]}" ]
-                 network => [ "127.0.0.0/8", "192.168.0.0/16", "172.16.0.0/12", "10.0.0.0/8", "0.0.0.0/32", "255.255.255.255/32", "fd00::/8", "224.0.0.0/24", "::1/128" ]
-            }
-            if "src_homenet" not in [tags] {
-                cidr {
-                    add_tag => [ "src_homenet", "Site1" ]
-                    address => [ "%{[src][ip]}" ]
-                    network => [ "" ]
-                }
-                cidr {
-                    add_tag => [ "src_homenet", "Site2" ]
-                    address => [ "%{[src][ip]}" ]
-                    network => [ "" ]
-                }
-                cidr {
-                    add_tag => [ "src_homenet", "Site3" ]
-                    address => [ "%{[src][ip]}" ]
-                    network => [ "" ]
-                }
-                cidr {
-                    add_tag => [ "src_homenet", "Site4" ]
-                    address => [ "%{[src][ip]}" ]
-                    network => [ "" ]
-                }
-                cidr {
-                    add_tag => [ "src_homenet", "Site5" ]
-                    address => [ "%{[src][ip]}" ]
-                    network => [ "" ]
-                }
-                cidr {
-                    add_tag => [ "src_homenet", "Site6" ]
-                    address => [ "%{[src][ip]}" ]
-                    network => [ "" ]
-                }
-                cidr {
-                    add_tag => [ "src_homenet", "Site7" ]
-                    address => [ "%{[src][ip]}" ]
-                    network => [ "" ]
-                }
-                if "src_homenet" not in [tags] {
-                    mutate {
-                    add_tag => [ "src_external" ]
-                    }
-                }
-             }
+           cidr {
+               add_field => { "src_homenet" => "Site1" }
+               address => [ "%{[src][ip]}" ]
+               network => [ "PubRange1", "PubRange2", "PrivRange" ]
+           }
+           cidr {
+               add_field => { "src_homenet" => "Site2" }
+               address => [ "%{[src][ip]}" ]
+               network => [ "PubRange1", "PubRange2", "PrivRange" ]
+           }
+           if ![src_homenet] {
+               cidr {
+                   add_field => { "src_homenet" => "rfc1819" }
+                   address => [ "%{[src][ip]}" ]
+                   network => [ "127.0.0.0/8", "192.168.0.0/16", "172.16.0.0/12", "10.0.0.0/8", "0.0.0.0/32", "255.255.255.255/32", "fd00::/8", "224.0.0.0/24", "::1/128" ]
+               }
+               if ![src_homenet] {
+                   mutate {
+                   add_field => { "src_external" => "true" }
+                   }
+               }
+           }
         }#End if src ip
+
         if [dst][ip] #=~ /^(?:[0-9]{1,3}\.){3}[0-9]{1,3}$/ #commented out check for valid IP
            {
             cidr {
-                 add_tag => [ "dst_homenet" ]
-                 address => [ "%{[dst][ip]}" ]
-                 network => [ "127.0.0.0/8", "192.168.0.0/16", "172.16.0.0/12", "10.0.0.0/8", "0.0.0.0/32", "255.255.255.255/32", "fd00::/8", "224.0.0.0/24", "::1/128" ]
-            }
-            if "dst_homenet" not in [tags] {
+               add_field => { "dst_homenet" => "Site1" }
+               address => [ "%{[dst][ip]}" ]
+               network => [ "PubRange1", "PubRange2", "PrivRange" ]
+           }
+           cidr {
+               add_field => { "dst_homenet" => "Site2" }
+               address => [ "%{[dst][ip]}" ]
+               network => [ "PubRange1", "PubRange2", "PrivRange" ]
+           }
+           if ![dst_homenet] {
                cidr {
-                    add_tag => [ "dst_homenet", "Site1" ]
-                    address => [ "%{[dst][ip]}" ]
-                    network => [ "" ]
-                }
-                cidr {
-                    add_tag => [ "dst_homenet", "Site2" ]
-                    address => [ "%{[dst][ip]}" ]
-                    network => [ "" ]
-                }
-                cidr {
-                    add_tag => [ "dst_homenet", "Site3" ]
-                    address => [ "%{[dst][ip]}" ]
-                    network => [ "" ]
-                }
-                cidr {
-                    add_tag => [ "dst_homenet", "Site4" ]
-                    address => [ "%{[dst][ip]}" ]
-                    network => [ "" ]
-                }
-                cidr {
-                    add_tag => [ "dst_homenet", "Site5" ]
-                    address => [ "%{[dst][ip]}" ]
-                    network => [ "" ]
-                }
-                cidr {
-                    add_tag => [ "dst_homenet", "Site6" ]
-                    address => [ "%{[dst][ip]}" ]
-                    network => [ "" ]
-                }
-                cidr {
-                    add_tag => [ "dst_homenet", "Site7" ]
-                    address => [ "%{[dst][ip]}" ]
-                    network => [ "" ]
-                }
-                if "dst_homenet" not in [tags] {
-                    mutate {
-                    add_tag => [ "dst_external" ]
-                    }
-                }
-            }
+                   add_field => { "dst_homenet" => "rfc1819" }
+                   address => [ "%{[dst][ip]}" ]
+                   network => [ "127.0.0.0/8", "192.168.0.0/16", "172.16.0.0/12", "10.0.0.0/8", "0.0.0.0/32", "255.255.255.255/32", "fd00::/8", "224.0.0.0/24", "::1/128" ]
+               }
+               if ![dst_homenet] {
+                   mutate {
+                   add_field => { "dst_external" => "true"}
+                   }
+               }
+           }
         }#End if dst.ip
 
         if [tls][fingerprint] {
@@ -118,7 +69,7 @@ filter {
             target => "user-agent"
           }
         }
-        if [http][url_full] and "dst_external" in [tags] {
+        if [http][url_full] and [dst_external] {
             translate {
                 field => "[http][url_full]"
                 destination => "[lookup][blk_url]"
@@ -129,17 +80,17 @@ filter {
             }
         }
         if [src][ip] or [dst][ip]{
-            if "dst_external" in [tags] and "src_external" in [tags]{
+            if [dst_external] and [src_external] {
                 mutate {
                     add_tag => ["src_dst_external"]
                 }
             }
-            else if "dst_external" in [tags] {
+            else if [dst_external] {
                 mutate{
                     copy => { "[dst][ip]" => "[lookup][ip]" }
                 }
             }
-            else if "src_external" in [tags]{
+            else if [src_external] {
                 mutate{
                     copy => { "[src][ip]" => "[lookup][ip]" }
                 }
@@ -154,7 +105,6 @@ filter {
                     }
                 }
             }
-
             if [lookup][ip]{
                 geoip {
                     database => "/etc/logstash/translate/GeoLite2-City.mmdb"
@@ -171,7 +121,6 @@ filter {
                 if ![lookup][host] {
                     mutate {
                         copy => { "[lookup][ip]" => "[lookup][host]" }
-                        remove_field => ["[lookup][geoip][ASN][ip]"]
                         add_field => [ "[lookup][ip_senderbase]", "http://www.senderbase.org/lookup/?search_string=%{[lookup][ip]}" ]
                         add_field => [ "[lookup][ip_virustotal]", "https://www.virustotal.com/#/ip-address/%{[lookup][ip]}" ]
                     }
@@ -200,7 +149,7 @@ filter {
                         refresh_behaviour => replace
                     }
                 }
-                if "dst_external" in [tags] {
+                if [dst_external] {
                     translate {
                         field => "[lookup][ip]"
                         destination => "[lookup][blk_ip]"
@@ -210,7 +159,7 @@ filter {
                         refresh_behaviour => replace
                     }
                 }
-                if "src_external" {
+                if [src_external] {
                     translate {
                         field => "[lookup][ip]"
                         destination => "[lookup][blk_ip]"
@@ -221,7 +170,9 @@ filter {
                     }
                 }
             }
-
+          mutate {
+               remove_field => ["[lookup][geoip][ASN][ip]", "dest_ip", "src_ip", "dest_port", "src_port", "payload", "packet", "[beat][hostname]", "[beat][name]", "timestamp"]
+          }
         } #End if src.ip or dst.ip
 
         #Tag Noise
