--- a/logstash/conf.d/default/b2_filter_suricata.conf
+++ b/logstash/conf.d/default/b2_filter_suricata.conf
@@ -18,7 +18,7 @@ filter {
                 copy => { "[tls][sni]" => "[lookup][host]" }
                  }
         }
-        if [dns][type] == "answer" and [dns][rrtype] == "A" {
+        if [dns][type] == "answer" and [dns][rrtype] == "A" and [dns][rdata] != ''{
             mutate {
                  copy => { "[dns][rdata]" => "[lookup][ip]" }
                  copy => { "[dns][rrname]" => "[lookup][host]" }
