--- a/logstash/conf.d/default/a_input.conf
+++ b/logstash/conf.d/default/a_input.conf
@@ -1,8 +1,13 @@
-
 input {
    file {
-	path => "/var/log/raw/events.json"
-	sincedb_path => "/var/log/raw/sincedb"
-	codec => "json"
+        id => "input_processed_events"
+        path => "/var/log/raw/*.json"
+        sincedb_path => "/var/log/raw/sincedb"
+        sincedb_clean_after => 0.125
+        close_older => 360
+        codec => "json"
+        max_open_files => 10
   }
 }
+
+
